# evecc

./: .gitmodules  CMakeLists.txt  build_and_run.bat  readme.md
cmake/: git.cmake  version.h.in
src/: blue_module.cpp  blue_module.h  bluecrypto.cpp  bluecrypto.h  commands.cpp  commands.h  ini.h  main.cpp  py_build_cache.cpp  py_build_cache.h  scripts.h  util.cpp  util.h
